--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -328,7 +328,7 @@ input {
 }
 .section_1_2_button_b {
   border-radius: 30px;
-  height: 100%;
+  height: 3rem;
   font-size: 0.9rem;
   padding: 5% 5% 5% 5%;
   font-weight: bold;
@@ -401,7 +401,7 @@ input {
   position: relative;
   left: 0.1rem;
 }
-.section_2_2_card_s_text p, .section_2_2_card_s_text1 p {
+.section_2_2_card_s_text, .section_2_2_card_s_text1 {
   font-weight: bolder;
   font-size: 1.05rem;
 }
@@ -657,8 +657,8 @@ footer a {
   font-family: "Shrikhand";
   font-size: 140%;
 }
-.R1-menu-carte-title-text h1 {
-  font-weight: 400;
+.R1-menu-carte-title-text h2 {
+  font-weight: lighter;
 }
 .R1-menu-carte-title-heart {
   width: 10%;
@@ -710,7 +710,7 @@ footer a {
   background-color: #99E2D0;
   animation: menu 500ms;
 }
-.R1-menu-carte-choix-entrees-nom :hover > #pricebox {
+.R1-menu-carte-choix-entrees-nom :hover > #pricebox, .R1-menu-carte-choix-entrees-nom :hover #pricebox1, .R1-menu-carte-choix-entrees-nom :hover #pricebox2, .R1-menu-carte-choix-entrees-nom :hover #pricebox3, .R1-menu-carte-choix-entrees-nom :hover #pricebox4, .R1-menu-carte-choix-entrees-nom :hover #pricebox5, .R1-menu-carte-choix-entrees-nom :hover #pricebox6, .R1-menu-carte-choix-entrees-nom :hover #pricebox7, .R1-menu-carte-choix-entrees-nom :hover #pricebox8, .R1-menu-carte-choix-entrees-nom :hover #pricebox9, .R1-menu-carte-choix-entrees-nom :hover #pricebox10 {
   animation: price 500ms forwards;
 }
 .R1-menu-carte-choix-entrees-nom :hover .checkrotate {
@@ -723,7 +723,7 @@ footer a {
 }
 .R1-menu-carte-choix-entrees-nom-x {
   width: 95%;
-  height: 4.5rem;
+  height: 4.8rem;
   display: flex;
   justify-content: space-between;
   background-color: white;
@@ -747,26 +747,33 @@ footer a {
   width: 70%;
   margin-left: 4%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-titre {
   margin: 0;
   padding: 0;
-  height: 55%;
+  height: fit-content;
+  display: flex;
+  align-content: flex-start;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-titre h3 {
+  margin: 0;
   font-size: 100%;
+  height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-stitre {
   margin: 0;
   padding: 0;
-  height: 45%;
+  height: fit-content;
+  display: flex;
+  align-content: flex-start;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-stitre p {
-  position: relative;
-  bottom: 0;
+  margin: 0;
   font-size: 85%;
-  position: relative;
-  bottom: 90%;
+  height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom-x-price {
   width: 5%;
@@ -779,7 +786,7 @@ footer a {
 }
 .R1-menu-carte-choix-entrees-nom-x-price h3 {
   position: relative;
-  top: 8%;
+  top: 5%;
   font-size: 95%;
 }
 .R1-menu-carte-button {
