--- a/Sass/Pages/_home_page.scss
+++ b/Sass/Pages/_home_page.scss
@@ -95,7 +95,7 @@
   
         &_b{
           border-radius: 30px;
-          height: 100%;
+          height: 3rem;
           font-size: 0.9rem;
           padding: 5% 5% 5% 5%;
           font-weight: bold;
@@ -177,8 +177,8 @@
             position: relative;
             left: 0.1rem;
           }
-          &_text p,
-          &_text1 p {
+          &_text,
+          &_text1 {
             font-weight: bolder;
             font-size: 1.05rem;
           }
