--- a/Sass/Pages/_restaurant.scss
+++ b/Sass/Pages/_restaurant.scss
@@ -68,8 +68,8 @@
             margin-left: 5%;
             font-family: "Shrikhand";
             font-size: 140%;
-            & h1 {
-              font-weight: 400;
+            & h2 {
+              font-weight:lighter;
             }
           }
           &-heart {
@@ -131,9 +131,11 @@
                  
                  
                 }
-                & > #pricebox {
+                & > #pricebox, #pricebox1, #pricebox2, #pricebox3, #pricebox4, #pricebox5, #pricebox6, #pricebox7, #pricebox8, #pricebox9, #pricebox10 {
                   animation: price 500ms forwards;
                   
+
+
                 }
                  .checkrotate { 
                   animation: rotate 400ms;
@@ -152,7 +154,7 @@
               &-x {
                 
                 width: 95%;
-                height: 4.5rem;
+                height: 4.8rem;
                 display: flex;
                 justify-content: space-between;
                 background-color:white;
@@ -183,28 +185,44 @@
                   margin-left: 4%;
                   height: 100%;
                   
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
                   
   
                   &-titre {
                     margin: 0;
                     padding: 0;
-                    height: 55%;
+                    height: fit-content;
+                    display: flex;
+                    align-content: flex-start;
+                    
   
                     & h3 {
+                      margin: 0;
                       font-size: 100%;
+                      height: fit-content;
+                      
+                      
+                      
                     }
+                   
                   }
                   &-stitre {
                     margin: 0;
                     padding: 0;
-                    height: 45%;
+                    height: fit-content;
+                    display: flex;
+                    align-content: flex-start;
+                    
   
                     & p {
-                      position: relative;
-                      bottom: 0;
+                      margin: 0;
                       font-size: 85%;
-                      position: relative;
-                      bottom: 90%;
+                      height: fit-content;
+                      
+                      
+                      
                     }
                   }
                 }
@@ -219,8 +237,7 @@
   
                   & h3 {
                     position: relative;
-                    top: 8%;
-                    
+                    top: 5%;
                     font-size: 95%;
                   }
                 }
