--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -1,3 +1,11 @@
+@-webkit-keyframes menu-anim {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes menu-anim {
   0% {
     opacity: 0;
@@ -14,6 +22,7 @@
   height: 100%;
   background-color: white;
   z-index: 10;
+  -webkit-animation: loader 0s forwards;
   animation: loader 0s forwards;
   width: 100%;
   height: 100%;
@@ -22,6 +31,14 @@
   align-items: center;
 }
 
+@-webkit-keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
 @keyframes loader {
   0% {
     visibility: visible;
@@ -50,10 +67,26 @@
   color: #ff79da;
   font-family: shrikhand;
   -webkit-animation: flash 1.2s linear infinite;
-  -o-animation: flash 1.2s linear infinite;
   animation: flash 1.2s linear infinite;
 }
 
+@-webkit-keyframes flash {
+  0% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  89% {
+    color: #ff79da;
+    text-shadow: none;
+  }
+  99% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes flash {
   0% {
     color: #9356dc;
@@ -76,38 +109,47 @@
 }
 
 .loader .lettre:nth-child(1) {
+  -webkit-animation-delay: 100ms;
   animation-delay: 100ms;
 }
 
 .loader .lettre:nth-child(2) {
+  -webkit-animation-delay: 200ms;
   animation-delay: 200ms;
 }
 
 .loader .lettre:nth-child(3) {
+  -webkit-animation-delay: 300ms;
   animation-delay: 300ms;
 }
 
 .loader .lettre:nth-child(4) {
+  -webkit-animation-delay: 400ms;
   animation-delay: 400ms;
 }
 
 .loader .lettre:nth-child(5) {
+  -webkit-animation-delay: 500ms;
   animation-delay: 500ms;
 }
 
 .loader .lettre:nth-child(6) {
+  -webkit-animation-delay: 600ms;
   animation-delay: 600ms;
 }
 
 .loader .lettre:nth-child(7) {
+  -webkit-animation-delay: 700ms;
   animation-delay: 700ms;
 }
 
 .loader .lettre:nth-child(8) {
+  -webkit-animation-delay: 800ms;
   animation-delay: 800ms;
 }
 
 .loader .lettre:nth-child(9) {
+  -webkit-animation-delay: 900ms;
   animation-delay: 900ms;
 }
 
@@ -121,6 +163,7 @@
 
 .lds-spinner div {
   transform-origin: 40px 40px;
+  -webkit-animation: lds-spinner 1.2s linear infinite;
   animation: lds-spinner 1.2s linear infinite;
 }
 
@@ -138,70 +181,100 @@
 
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
+  -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
 .lds-spinner div:nth-child(2) {
   transform: rotate(30deg);
+  -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
 .lds-spinner div:nth-child(3) {
   transform: rotate(60deg);
+  -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
 .lds-spinner div:nth-child(4) {
   transform: rotate(90deg);
+  -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
 
 .lds-spinner div:nth-child(5) {
   transform: rotate(120deg);
+  -webkit-animation-delay: -0.7s;
   animation-delay: -0.7s;
 }
 
 .lds-spinner div:nth-child(6) {
   transform: rotate(150deg);
+  -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
 }
 
 .lds-spinner div:nth-child(7) {
   transform: rotate(180deg);
+  -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
 
 .lds-spinner div:nth-child(8) {
   transform: rotate(210deg);
+  -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
 }
 
 .lds-spinner div:nth-child(9) {
   transform: rotate(240deg);
+  -webkit-animation-delay: -0.3s;
   animation-delay: -0.3s;
 }
 
 .lds-spinner div:nth-child(10) {
   transform: rotate(270deg);
+  -webkit-animation-delay: -0.2s;
   animation-delay: -0.2s;
 }
 
 .lds-spinner div:nth-child(11) {
   transform: rotate(300deg);
+  -webkit-animation-delay: -0.1s;
   animation-delay: -0.1s;
 }
 
 .lds-spinner div:nth-child(12) {
   transform: rotate(330deg);
+  -webkit-animation-delay: 0s;
   animation-delay: 0s;
 }
 
+@-webkit-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes lds-spinner {
   0% {
     opacity: 1;
   }
   100% {
     opacity: 0;
+  }
+}
+@-webkit-keyframes menu {
+  0% {
+    transform: scaleX(0);
+    opacity: 0.5;
+  }
+  80% {
+    transform: scaleX(1);
+    opacity: 1;
   }
 }
 @keyframes menu {
@@ -214,12 +287,28 @@
     opacity: 1;
   }
 }
+@-webkit-keyframes price {
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translateX(-200%);
+  }
+}
 @keyframes price {
   0% {
     transform: translate(0);
   }
   100% {
     transform: translateX(-200%);
+  }
+}
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 @keyframes rotate {
@@ -233,6 +322,8 @@
 /* Home Page */
 .Home {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin: 0;
   font-family: "roboto", sans-serif;
@@ -371,7 +462,9 @@ input {
   background-color: #f5edff;
   cursor: pointer;
 }
-.section_2_2_card:hover .fa-mobile-alt, .section_2_2_card:hover .fa-list-ul, .section_2_2_card:hover .fa-store {
+.section_2_2_card:hover .fa-mobile-alt,
+.section_2_2_card:hover .fa-list-ul,
+.section_2_2_card:hover .fa-store {
   color: #9356dc;
 }
 .section_2_2_card_s {
@@ -445,6 +538,7 @@ input {
   margin: 2% 0 0 4.2%;
   border-radius: 20px;
   background-color: white;
+  -webkit-tap-highlight-color: transparent;
   box-shadow: #dddcdc 5px 5px 5px;
 }
 .section_3_2_cards_1_pict {
@@ -456,6 +550,7 @@ input {
   height: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .section_3_2_cards_1_legend {
@@ -500,11 +595,14 @@ input {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 .section_3_2_cards_1_legend_heart:hover .fas {
+  -webkit-animation: menu-anim 2s forwards;
   animation: menu-anim 2s forwards;
 }
 .section_3_2_cards_1_legend_heart:hover .far {
+  -webkit-animation: lds-spinner 100ms forwards;
   animation: lds-spinner 100ms forwards;
 }
 
@@ -523,20 +621,22 @@ input {
   opacity: 1;
 }
 
-.new, .new1 {
+.new,
+.new1 {
   height: 14%;
   width: 22%;
   min-width: 4rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #99E2D0;
+  background-color: #99e2d0;
   border-radius: 5px;
   position: relative;
   left: 72%;
   bottom: 90%;
 }
-.new p, .new1 p {
+.new p,
+.new1 p {
   color: #008766;
   font-size: 100%;
   font-weight: 600;
@@ -572,7 +672,8 @@ footer a {
   margin-right: 50%;
   font-size: 1rem;
 }
-.foot_list_icon .fa-utensils, .foot_list .fa-handshake {
+.foot_list_icon .fa-utensils,
+.foot_list .fa-handshake {
   color: white;
 }
 .foot_list ul li {
@@ -585,6 +686,8 @@ footer a {
 /* Restaurant page */
 .R1 {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin: 0;
   font-family: "roboto", sans-serif;
@@ -603,6 +706,7 @@ footer a {
   display: flex;
   align-items: center;
   justify-content: center;
+  -webkit-tap-highlight-color: transparent;
 }
 .R1-header-b1 i {
   color: #353535;
@@ -621,6 +725,8 @@ footer a {
 }
 .R1-menu {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin: 0;
 }
@@ -631,12 +737,15 @@ footer a {
 .R1-menu-header-pict {
   width: 100%;
   height: 18rem;
+  -o-object-fit: cover;
   object-fit: cover;
 }
 .R1-menu-carte {
   width: 100%;
   z-index: 1;
   background-color: #f6f6f6;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   position: relative;
   bottom: 4rem;
@@ -663,6 +772,7 @@ footer a {
 .R1-menu-carte-title-heart {
   width: 10%;
   height: 30%;
+  -webkit-tap-highlight-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -681,12 +791,16 @@ footer a {
 }
 .R1-menu-carte-choix {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   margin-bottom: 10%;
   background-color: #f6f6f6;
 }
 .R1-menu-carte-choix-entrees {
   margin-bottom: 4%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .R1-menu-carte-choix-entrees-title {
@@ -701,19 +815,34 @@ footer a {
 }
 .R1-menu-carte-choix-entrees-nom {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom :hover {
   cursor: pointer;
 }
 .R1-menu-carte-choix-entrees-nom :hover > :nth-child(3) {
-  background-color: #99E2D0;
+  background-color: #99e2d0;
+  -webkit-animation: menu 500ms;
   animation: menu 500ms;
 }
-.R1-menu-carte-choix-entrees-nom :hover > #pricebox, .R1-menu-carte-choix-entrees-nom :hover #pricebox1, .R1-menu-carte-choix-entrees-nom :hover #pricebox2, .R1-menu-carte-choix-entrees-nom :hover #pricebox3, .R1-menu-carte-choix-entrees-nom :hover #pricebox4, .R1-menu-carte-choix-entrees-nom :hover #pricebox5, .R1-menu-carte-choix-entrees-nom :hover #pricebox6, .R1-menu-carte-choix-entrees-nom :hover #pricebox7, .R1-menu-carte-choix-entrees-nom :hover #pricebox8, .R1-menu-carte-choix-entrees-nom :hover #pricebox9, .R1-menu-carte-choix-entrees-nom :hover #pricebox10 {
+.R1-menu-carte-choix-entrees-nom :hover > #pricebox,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox1,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox2,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox3,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox4,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox5,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox6,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox7,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox8,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox9,
+.R1-menu-carte-choix-entrees-nom :hover #pricebox10 {
+  -webkit-animation: price 500ms forwards;
   animation: price 500ms forwards;
 }
 .R1-menu-carte-choix-entrees-nom :hover .checkrotate {
+  -webkit-animation: rotate 400ms;
   animation: rotate 400ms;
   height: 100%;
   width: 100%;
@@ -754,6 +883,8 @@ footer a {
 .R1-menu-carte-choix-entrees-nom-x-text-titre {
   margin: 0;
   padding: 0;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   align-content: flex-start;
@@ -761,11 +892,15 @@ footer a {
 .R1-menu-carte-choix-entrees-nom-x-text-titre h3 {
   margin: 0;
   font-size: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom-x-text-stitre {
   margin: 0;
   padding: 0;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   align-content: flex-start;
@@ -773,6 +908,8 @@ footer a {
 .R1-menu-carte-choix-entrees-nom-x-text-stitre p {
   margin: 0;
   font-size: 85%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom-x-price {
@@ -797,7 +934,9 @@ footer a {
   margin: 0;
 }
 .R1-menu-carte-button :hover {
+  -webkit-filter: opacity(80%);
   filter: opacity(80%);
+  -webkit-filter: brightness(110%);
   filter: brightness(110%);
   cursor: pointer;
   box-shadow: 0px 2px 17px 5px rgba(79, 79, 79, 0.32);
@@ -816,68 +955,100 @@ footer a {
 }
 
 #p1 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
 }
 
 #p2 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 100ms;
   animation-delay: 100ms;
 }
 
 #p3 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 200ms;
   animation-delay: 200ms;
 }
 
 #p4 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 300ms;
   animation-delay: 300ms;
 }
 
 #p5 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 400ms;
   animation-delay: 400ms;
 }
 
 #p6 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 500ms;
   animation-delay: 500ms;
 }
 
 #p7 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 600ms;
   animation-delay: 600ms;
 }
 
 #p8 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 700ms;
   animation-delay: 700ms;
 }
 
 #p9 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 800ms;
   animation-delay: 800ms;
 }
 
 #p10 {
+  -webkit-animation-name: menu-anim;
   animation-name: menu-anim;
+  -webkit-animation-duration: 1000ms;
   animation-duration: 1000ms;
+  -webkit-animation-delay: 900ms;
   animation-delay: 900ms;
 }
 
 .heart_anim :hover .far {
+  -webkit-animation: lds-spinner 100ms forwards;
   animation: lds-spinner 100ms forwards;
+  -webkit-tap-highlight-color: transparent;
 }
 .heart_anim :hover .fas {
+  -webkit-animation: menu-anim 2s forwards;
   animation: menu-anim 2s forwards;
 }
 
@@ -887,6 +1058,7 @@ footer a {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Media Queries - tablet */
@@ -926,6 +1098,8 @@ footer a {
   }
 
   .section_3 {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     width: 95%;
     background-color: #f6f6f6;
