--- a/Sass/Utils/_Animation.scss
+++ b/Sass/Utils/_Animation.scss
@@ -1,4 +1,12 @@
+@-webkit-keyframes menu-anim {
+  0% {
+    opacity: 0;
+  }
 
+  100% {
+    opacity: 1;
+  }
+}
 @keyframes menu-anim {
   0% {
     opacity: 0;
@@ -11,17 +19,26 @@
 .loader {
   position: fixed;
   top: 0;
-  left: 0px; 
+  left: 0px;
   width: 100%;
   height: 100%;
   background-color: white;
   z-index: 10;
-  animation: loader 0s forwards;
+  -webkit-animation: loader 0s forwards;
+          animation: loader 0s forwards;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@-webkit-keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
 }
 @keyframes loader {
   0% {
@@ -51,8 +68,25 @@
   color: #ff79da;
   font-family: shrikhand;
   -webkit-animation: flash 1.2s linear infinite;
-  -o-animation: flash 1.2s linear infinite;
   animation: flash 1.2s linear infinite;
+}
+
+@-webkit-keyframes flash {
+  0% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  89% {
+    color: #ff79da;
+    text-shadow: none;
+  }
+  99% {
+    color: #9356dc;
+    text-shadow: 0 0 7px #9356dc;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes flash {
@@ -73,39 +107,44 @@
   }
 }
 
-
-  
-  
-
-.chargement{
-width: 100%;
+.chargement {
+  width: 100%;
 }
 .loader .lettre:nth-child(1) {
-  animation-delay: 100ms;
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
 }
 .loader .lettre:nth-child(2) {
-  animation-delay: 200ms;
+  -webkit-animation-delay: 200ms;
+          animation-delay: 200ms;
 }
 .loader .lettre:nth-child(3) {
-  animation-delay: 300ms;
+  -webkit-animation-delay: 300ms;
+          animation-delay: 300ms;
 }
 .loader .lettre:nth-child(4) {
-  animation-delay: 400ms;
+  -webkit-animation-delay: 400ms;
+          animation-delay: 400ms;
 }
 .loader .lettre:nth-child(5) {
-  animation-delay: 500ms;
+  -webkit-animation-delay: 500ms;
+          animation-delay: 500ms;
 }
 .loader .lettre:nth-child(6) {
-  animation-delay: 600ms;
+  -webkit-animation-delay: 600ms;
+          animation-delay: 600ms;
 }
 .loader .lettre:nth-child(7) {
-  animation-delay: 700ms;
+  -webkit-animation-delay: 700ms;
+          animation-delay: 700ms;
 }
 .loader .lettre:nth-child(8) {
-  animation-delay: 800ms;
+  -webkit-animation-delay: 800ms;
+          animation-delay: 800ms;
 }
 .loader .lettre:nth-child(9) {
-  animation-delay: 900ms;
+  -webkit-animation-delay: 900ms;
+          animation-delay: 900ms;
 }
 .lds-spinner {
   color: official;
@@ -116,7 +155,8 @@ width: 100%;
 }
 .lds-spinner div {
   transform-origin: 40px 40px;
-  animation: lds-spinner 1.2s linear infinite;
+  -webkit-animation: lds-spinner 1.2s linear infinite;
+          animation: lds-spinner 1.2s linear infinite;
 }
 .lds-spinner div:after {
   content: " ";
@@ -131,51 +171,71 @@ width: 100%;
 }
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
-  animation-delay: -1.1s;
+  -webkit-animation-delay: -1.1s;
+          animation-delay: -1.1s;
 }
 .lds-spinner div:nth-child(2) {
   transform: rotate(30deg);
-  animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
 }
 .lds-spinner div:nth-child(3) {
   transform: rotate(60deg);
-  animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+          animation-delay: -0.9s;
 }
 .lds-spinner div:nth-child(4) {
   transform: rotate(90deg);
-  animation-delay: -0.8s;
+  -webkit-animation-delay: -0.8s;
+          animation-delay: -0.8s;
 }
 .lds-spinner div:nth-child(5) {
   transform: rotate(120deg);
-  animation-delay: -0.7s;
+  -webkit-animation-delay: -0.7s;
+          animation-delay: -0.7s;
 }
 .lds-spinner div:nth-child(6) {
   transform: rotate(150deg);
-  animation-delay: -0.6s;
+  -webkit-animation-delay: -0.6s;
+          animation-delay: -0.6s;
 }
 .lds-spinner div:nth-child(7) {
   transform: rotate(180deg);
-  animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
 }
 .lds-spinner div:nth-child(8) {
   transform: rotate(210deg);
-  animation-delay: -0.4s;
+  -webkit-animation-delay: -0.4s;
+          animation-delay: -0.4s;
 }
 .lds-spinner div:nth-child(9) {
   transform: rotate(240deg);
-  animation-delay: -0.3s;
+  -webkit-animation-delay: -0.3s;
+          animation-delay: -0.3s;
 }
 .lds-spinner div:nth-child(10) {
   transform: rotate(270deg);
-  animation-delay: -0.2s;
+  -webkit-animation-delay: -0.2s;
+          animation-delay: -0.2s;
 }
 .lds-spinner div:nth-child(11) {
   transform: rotate(300deg);
-  animation-delay: -0.1s;
+  -webkit-animation-delay: -0.1s;
+          animation-delay: -0.1s;
 }
 .lds-spinner div:nth-child(12) {
   transform: rotate(330deg);
-  animation-delay: 0s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+@-webkit-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 @keyframes lds-spinner {
   0% {
@@ -185,37 +245,57 @@ width: 100%;
     opacity: 0;
   }
 }
-@keyframes menu {
-  0%{
-    transform:scaleX(0); 
-    opacity: .5;
-
+@-webkit-keyframes menu {
+  0% {
+    transform: scaleX(0);
+    opacity: 0.5;
   }
-  80%{
+  80% {
     transform: scaleX(1);
-    opacity: 1 ;
+    opacity: 1;
+  }
+}
+@keyframes menu {
+  0% {
+    transform: scaleX(0);
+    opacity: 0.5;
+  }
+  80% {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes price {
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translateX(-200%);
   }
 }
 @keyframes price {
-
-  0%{
-    transform:translate(0) 
-   }
-  100%{
-    transform:translateX(-200%) 
+  0% {
+    transform: translate(0);
+  }
+  100% {
+    transform: translateX(-200%);
   }
 }
 
-@keyframes rotate{
-  0%{
+@-webkit-keyframes rotate {
+  0% {
     transform: rotate(0);
   }
-  100%{
+  100% {
     transform: rotate(360deg);
+  }
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
-
-
-
-
