--- a/Sass/Pages/_home_page.scss
+++ b/Sass/Pages/_home_page.scss
@@ -88,21 +88,27 @@ input {
       width: 60%;
       display: flex;
       justify-content: center;
-      height: 100%;
-
-      display: flex;
-      align-items: center;
+      height: 3rem;
+      margin-top: 5%;
+      & :hover {
+        -webkit-filter: opacity(80%);
+        filter: opacity(80%);
+        -webkit-filter: brightness(110%);
+        filter: brightness(110%);
+        cursor: pointer;
+        box-shadow: 0px 2px 17px 5px rgba(79, 79, 79, 0.32);
+      }
 
       &_b {
         border-radius: 30px;
-        height: 3rem;
+        width: 60%;
+        height: 100%;
         font-size: 0.9rem;
-        padding: 5% 5% 5% 5%;
         font-weight: bold;
-        outline: none;
         border: none;
         box-shadow: 0px 4px 17px 2px rgba(79, 79, 79, 0.26);
         color: white;
+        outline: none;
         background: linear-gradient(
           to bottom right,
           $secondary_color,
@@ -233,7 +239,7 @@ input {
             border-top-left-radius: 20px;
             border-top-right-radius: 20px;
             -o-object-fit: cover;
-               object-fit: cover;
+            object-fit: cover;
           }
         }
         &_legend {
@@ -283,11 +289,11 @@ input {
           &_heart:hover {
             .fas {
               -webkit-animation: menu-anim 2s forwards;
-                      animation: menu-anim 2s forwards;
+              animation: menu-anim 2s forwards;
             }
             .far {
               -webkit-animation: lds-spinner 100ms forwards;
-                      animation: lds-spinner 100ms forwards;
+              animation: lds-spinner 100ms forwards;
             }
           }
         }
