--- a/Sass/Utils/_Animation.scss
+++ b/Sass/Utils/_Animation.scss
@@ -299,3 +299,14 @@
     transform: rotate(360deg);
   }
 }
+
+@keyframes text_reduce {
+  0% {
+    width: 100%;
+    
+  }
+  100% {
+    width: 80%;
+    
+  }
+}
