--- a/Sass/Pages/_restaurant.scss
+++ b/Sass/Pages/_restaurant.scss
@@ -151,6 +151,10 @@
                 transform-origin: left;
                 
               }
+              .R1-menu-carte-choix-entrees-nom-x-text-titre{
+                animation: text_reduce 200ms forwards;
+                transform-origin: left;
+              }
               
               & > #pricebox,
               #pricebox1,
