--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -22,8 +22,8 @@
   height: 100%;
   background-color: white;
   z-index: 10;
-  -webkit-animation: loader 0s forwards;
-  animation: loader 0s forwards;
+  -webkit-animation: loader 4s forwards;
+  animation: loader 4s forwards;
   width: 100%;
   height: 100%;
   display: flex;
@@ -66,8 +66,11 @@
   font-size: 30px;
   color: #ff79da;
   font-family: shrikhand;
-  -webkit-animation: flash 1.2s linear infinite;
-  animation: flash 1.2s linear infinite;
+  -webkit-animation: flash linear;
+  animation: flash linear;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 @-webkit-keyframes flash {
@@ -317,6 +320,14 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes text_reduce {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 80%;
   }
 }
 @keyframes text_reduce {
@@ -614,11 +625,19 @@ input {
 }
 .section_3_2_cards_1_legend_heart:hover .fas {
   -webkit-animation: menu-anim 2s forwards;
-  animation: menu-anim 2s forwards;
+  animation: menu-anim;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 .section_3_2_cards_1_legend_heart:hover .far {
   -webkit-animation: lds-spinner 100ms forwards;
-  animation: lds-spinner 100ms forwards;
+  animation: lds-spinner;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 100ms;
+  animation-duration: 100ms;
 }
 
 .section_3_2_cards_1_legend_heart :nth-child(2) {
@@ -839,14 +858,26 @@ footer a {
 .R1-menu-carte-choix-entrees-nom :hover > :nth-child(3) {
   background-color: #99e2d0;
   -webkit-animation: menu 500ms;
-  animation: menu 500ms;
+  animation: menu;
+  -webkit-animation-duration: 500ms;
+  animation-duration: 500ms;
 }
 .R1-menu-carte-choix-entrees-nom :hover .R1-menu-carte-choix-entrees-nom-x-text-stitre p {
-  animation: text_reduce 200ms forwards;
+  -webkit-animation: text_reduce;
+  animation: text_reduce;
+  -webkit-animation-duration: 200ms;
+  animation-duration: 200ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   transform-origin: left;
 }
 .R1-menu-carte-choix-entrees-nom :hover .R1-menu-carte-choix-entrees-nom-x-text-titre {
-  animation: text_reduce 200ms forwards;
+  -webkit-animation: text_reduce;
+  animation: text_reduce;
+  -webkit-animation-duration: 200ms;
+  animation-duration: 200ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   transform-origin: left;
 }
 .R1-menu-carte-choix-entrees-nom :hover > #pricebox,
@@ -860,12 +891,18 @@ footer a {
 .R1-menu-carte-choix-entrees-nom :hover #pricebox8,
 .R1-menu-carte-choix-entrees-nom :hover #pricebox9,
 .R1-menu-carte-choix-entrees-nom :hover #pricebox10 {
-  -webkit-animation: price 500ms forwards;
-  animation: price 500ms forwards;
+  -webkit-animation: price;
+  animation: price;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 500ms;
+  animation-duration: 500ms;
 }
 .R1-menu-carte-choix-entrees-nom :hover .checkrotate {
   -webkit-animation: rotate 400ms;
-  animation: rotate 400ms;
+  animation: rotate;
+  -webkit-animation-duration: 400ms;
+  animation-duration: 400ms;
   height: 100%;
   width: 100%;
   display: flex;
@@ -936,6 +973,8 @@ footer a {
   white-space: nowrap;
   overflow: hidden;
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 .R1-menu-carte-choix-entrees-nom-x-price {
@@ -1069,13 +1108,21 @@ footer a {
 }
 
 .heart_anim :hover .far {
-  -webkit-animation: lds-spinner 100ms forwards;
-  animation: lds-spinner 100ms forwards;
+  -webkit-animation: lds-spinner;
+  -webkit-animation-duration: 100ms;
+  -webkit-animation-fill-mode: forwards;
+  animation: lds-spinner;
+  animation-fill-mode: forwards;
+  animation-duration: 100ms;
   -webkit-tap-highlight-color: transparent;
 }
 .heart_anim :hover .fas {
-  -webkit-animation: menu-anim 2s forwards;
-  animation: menu-anim 2s forwards;
+  -webkit-animation: menu-anim;
+  animation: menu-anim;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 .heart_anim {
