--- a/Sass/Utils/_Animation.scss
+++ b/Sass/Utils/_Animation.scss
@@ -24,8 +24,8 @@
   height: 100%;
   background-color: white;
   z-index: 10;
-  -webkit-animation: loader 0s forwards;
-          animation: loader 0s forwards;
+  -webkit-animation: loader 4s forwards;
+          animation: loader 4s forwards;
   width: 100%;
   height: 100%;
   display: flex;
@@ -67,8 +67,13 @@
   font-size: 30px;
   color: #ff79da;
   font-family: shrikhand;
-  -webkit-animation: flash 1.2s linear infinite;
-  animation: flash 1.2s linear infinite;
+  -webkit-animation: flash  linear;
+  animation: flash  linear;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  
+  
 }
 
 @-webkit-keyframes flash {
@@ -297,6 +302,17 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes text_reduce {
+  0% {
+    width: 100%;
+    
+  }
+  100% {
+    width: 80%;
+    
   }
 }
 
